fix: overflow y situation

--- a/css/about.css
+++ b/css/about.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     display: block;
     height: 100vh;
+    overflow-y: auto;
 }
 
 html {
